--- a/lectures/1_first-app/index.html
+++ b/lectures/1_first-app/index.html
@@ -11,5 +11,8 @@
   </head>
   <body>
     <h2>Hello Javascript!</h2>
+
+    <!--특정 행동이 일어날 때 발생하는 이벤트-->
+    <input type="text" /><button onclick="obj.sayHello();">버튼</button>
   </body>
 </html>
