textContent와 innerHTML로 값 변경하기, setAttribute, removeAttribute로 속성 변경, 제거하기

--- a/lectures/2_dom-control/1_selector.html
+++ b/lectures/2_dom-control/1_selector.html
@@ -9,7 +9,11 @@
   <body>
     <h2 id="title">운동</h2>
     <form name="myForm"></form>
-    <input type="text" name="myText" />
+    <input
+      type="text"
+      name="myText"
+      placeholder="추가하실 운동을 입력하세요."
+    />
     <button>추가</button>
     <ul class="list">
       <li class="item">스쿼트</li>
