--- a/lectures/2_dom-control/1_selector.html
+++ b/lectures/2_dom-control/1_selector.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Selector</title>
     <script src="1_selector.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h2 id="title">운동</h2>
@@ -20,6 +21,7 @@
       <li class="item">벤치프레스</li>
       <li class="item">데드리프트</li>
     </ul>
+    <!--class 이름은 여러개 중첩 가능-->
     <p class="hello">안녕하세요</p>
   </body>
 </html>
